--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "js/main.js",
   "dependencies": {
     "babel-preset-react": "^6.16.0",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "big.js": "^3.1.3",
     "browserify": "^14.4.0",
