--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.5",
     "react-widgets": "^3.4.4",
+    "react-codemirror": "^1.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   },
