--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "description": "A personal finance web application",
   "main": "js/main.js",
   "dependencies": {
-    "babel-preset-react": "^6.16.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
-    "big.js": "^3.1.3",
+    "big.js": "^3.2.0",
     "browserify": "^14.4.0",
     "cldr-data": "^31.0.2",
-    "d3": "^4.5.0",
-    "globalize": "^1.1.1",
+    "d3": "^4.10.2",
+    "globalize": "^1.3.0",
     "keymirror": "^0.1.1",
-    "react": "^15.3.2",
-    "react-addons-update": "^15.3.2",
-    "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.3.2",
-    "react-redux": "^5.0.5",
-    "react-widgets": "^3.4.4",
+    "react": "^15.6.1",
+    "react-addons-update": "^15.6.0",
+    "react-bootstrap": "^0.31.3",
     "react-codemirror": "^1.0.0",
-    "redux": "^3.6.0",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-widgets": "^3.5.0",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {},
@@ -35,5 +35,5 @@
   "bugs": {
     "url": "https://github.com/aclindsa/moneygo/issues"
   },
-  "homepage": "https://github.com/aclindsa/moneygo#README"
+  "homepage": "https://github.com/aclindsa/moneygo#moneygo"
 }
