Get all current tests to pass with MySQL
This is done by requiring 'parseTime=true' in the MySQL DSN's (required
by github.com/go-sql-driver/mysql when Scan()ing to time.Time's), and
not forcing update counts to match if rows were updated to what they
already were.

--- a/example_config.ini
+++ b/example_config.ini
@@ -19,7 +19,9 @@ db-type = sqlite3
 #
 #     Sqlite example DSN: "file:moneygo.sqlite?cache=shared&mode=rwc"
 #    MySQL documentation: https://github.com/go-sql-driver/mysql/#dsn-data-source-name
-#            example DSN: "user:password@localhost/dbname"
+#            example DSN: "user:password@localhost/dbname&parseTime=true"
+#                         (Note: MySQL DSN's *must* include the
+#                          "parseTime=true" parameter)
 # Postgres documentation: https://godoc.org/github.com/lib/pq
 #            example DSN: "postgres://user:password@localhost/dbname"
 db-dsn = file:moneygo.sqlite?cache=shared&mode=rwc
