--- a/example_config.ini
+++ b/example_config.ini
@@ -19,7 +19,7 @@ db-type = sqlite3
 #
 #     Sqlite example DSN: "file:moneygo.sqlite?cache=shared&mode=rwc"
 #    MySQL documentation: https://github.com/go-sql-driver/mysql/#dsn-data-source-name
-#            example DSN: "user:password@localhost/dbname&parseTime=true"
+#            example DSN: "user:password@tcp(localhost)/dbname&parseTime=true"
 #                         (Note: MySQL DSN's *must* include the
 #                          "parseTime=true" parameter)
 # Postgres documentation: https://godoc.org/github.com/lib/pq
