--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,13 @@ env:
   - MONEYGO_TEST_DB=mysql
   - MONEYGO_TEST_DB=postgres
 
+# OSX builds take too long, so don't wait for all of them
+matrix:
+  fast_finish: true
+  allow_failures:
+    - os: osx
+      go: master
+
 # Install MySQL or Postgres if on OSX
 before_install:
   - if [ $TRAVIS_OS_NAME = 'osx' ] && [ $MONEYGO_TEST_DB = 'mysql'    ]; then brew update > /dev/null && brew install mariadb && mysql.server start; fi
