--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -39,7 +39,7 @@
 
 [[constraint]]
   name = "github.com/mattn/go-sqlite3"
-  version = "1.4.0"
+  revision = "1fc3fd346d3cc4c610f432d8bc938bb952733873"
 
 [[constraint]]
   branch = "master"
